--- a/starter/index.html
+++ b/starter/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="/css/font-icon.css">
+        <!-- <link rel="stylesheet" href="/css/font-icon.css"> -->
 
         <link rel="stylesheet" href="/css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
